<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Exercises W2 Grid</string>
    <string name="hello_world" translatable="false">Hello World!</string>
    <string name="click_me">Click on me</string>
    <string name="edit">This is an editText</string>
    <string name="btn">This is a button</string>
    <string name="cbox">This is a checkbox</string>
    <string name="text_view">Text View</string>
    <string name="button">Button</string>
    <string name="radio_button">Radio Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="theswitch">Switch</string>
    <string name="text">this is a texview</string>
</resources>